@@ -1,17 +1,3 @@
-tasks {
-    withType<JavaCompile> {
-        options.compilerArgs.add("--enable-preview")
-        options.forkOptions.jvmArgs!!.add("--enable-preview")
-    }
-    withType<Test> {
-        jvmArgs("--enable-preview")
-        useJUnitPlatform()
-    }
-    withType<JavaExec> {
-        jvmArgs("--enable-preview")
-    }
-}
-
 dependencies {
     implementation(project(":uplift-uuid"))
     implementation(project(":uplift-json"))
